@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF8"?>
 <rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#" xmlns:rel="http://purl.org/vocab/relationship/" xmlns:foaf="http://xmlns.com/foaf/0.1/" xmlns:bio="http://purl.org/vocab/bio/0.1/">
   <foaf:Group rdf:about="F17.xml#F17">
-    <rdfs:seeAlso rdf:resource="F17.xml"/>
+    <rdfs:seeAlso rdf:resource="F17.xml#F17"/>
     <foaf:member rdf:resource="I72.xml#I72"/>
   </foaf:Group>
   <foaf:Group rdf:about="F45.xml#F45">
-    <rdfs:seeAlso rdf:resource="F45.xml"/>
+    <rdfs:seeAlso rdf:resource="F45.xml#F45"/>
     <foaf:member rdf:resource="I72.xml#I72"/>
   </foaf:Group>
   <foaf:Person rdf:about="I72.xml#I72">
@@ -26,18 +26,18 @@
   </foaf:Person>
   <foaf:Person rdf:about="I71.xml#I71">
     <foaf:name>Angus Ogilvy</foaf:name>
-    <rdfs:seeAlso rdf:resource="I71.xml"/>
+    <rdfs:seeAlso rdf:resource="I71.xml#I71"/>
   </foaf:Person>
   <foaf:Person rdf:about="I70.xml#I70">
     <foaf:name>Alexandra Windsor</foaf:name>
-    <rdfs:seeAlso rdf:resource="I70.xml"/>
+    <rdfs:seeAlso rdf:resource="I70.xml#I70"/>
   </foaf:Person>
   <foaf:Person rdf:about="I74.xml#I74">
     <foaf:name>Marina Victoria Alexandra Ogilvy</foaf:name>
-    <rdfs:seeAlso rdf:resource="I74.xml"/>
+    <rdfs:seeAlso rdf:resource="I74.xml#I74"/>
   </foaf:Person>
   <foaf:Person rdf:about="I73.xml#I73">
     <foaf:name>Julia Rawlinson</foaf:name>
-    <rdfs:seeAlso rdf:resource="I73.xml"/>
+    <rdfs:seeAlso rdf:resource="I73.xml#I73"/>
   </foaf:Person>
 </rdf:RDF>
